@@ -158,6 +158,7 @@ GEN     random_F2x(long d, long vs);
 GEN     F2xq_ellcard(GEN a2, GEN a6, GEN T);
 GEN     F2xq_ellgens(GEN a2, GEN a6, GEN ch, GEN D, GEN m, GEN T);
 GEN     F2xq_ellgroup(GEN a2, GEN a6, GEN N, GEN T, GEN *pt_m);
+void    F2xq_elltwist(GEN a, GEN a6, GEN T, GEN *pt_a, GEN *pt_a6);
 GEN     F2xqE_add(GEN P, GEN Q, GEN a2, GEN T);
 GEN     F2xqE_changepoint(GEN x, GEN ch, GEN T);
 GEN     F2xqE_changepointinv(GEN x, GEN ch, GEN T);
@@ -389,6 +390,7 @@ GEN     zxX_to_Kronecker(GEN P, GEN Q);
 GEN     Flxq_ellcard(GEN a4, GEN a6, GEN T, ulong p);
 GEN     Flxq_ellgens(GEN a4, GEN a6, GEN ch, GEN D, GEN m, GEN T, ulong p);
 GEN     Flxq_ellgroup(GEN a4, GEN a6, GEN N, GEN T, ulong p, GEN *pt_m);
+void    Flxq_elltwist(GEN a, GEN a6, GEN T, ulong p, GEN *pt_a, GEN *pt_a6);
 GEN     Flxq_ellj(GEN a4, GEN a6, GEN T, ulong p);
 void    Flxq_ellj_to_a4a6(GEN j, GEN T, ulong p, GEN *pt_a4, GEN *pt_a6);
 GEN     FlxqE_add(GEN P, GEN Q, GEN a4, GEN T, ulong p);
@@ -416,6 +418,7 @@ GEN     Fp_ellgens(GEN a4, GEN a6, GEN ch, GEN D, GEN m, GEN p);
 GEN     Fp_ellgroup(GEN a4, GEN a6, GEN N, GEN p, GEN *pt_m);
 GEN     Fp_ellj(GEN a4, GEN a6, GEN p);
 int     Fp_elljissupersingular(GEN j, GEN p);
+void    Fp_elltwist(GEN a4, GEN a6, GEN p, GEN *pt_a4, GEN *pt_a6);
 GEN     Fp_ffellcard(GEN a4, GEN a6, GEN q, long n, GEN p);
 GEN     FpE_add(GEN P, GEN Q, GEN a4, GEN p);
 GEN     FpE_changepoint(GEN x, GEN ch, GEN p);
@@ -435,6 +438,7 @@ GEN     FpXQ_ellgens(GEN a4, GEN a6, GEN ch, GEN D, GEN m, GEN T, GEN p);
 GEN     FpXQ_ellgroup(GEN a4, GEN a6, GEN N, GEN T, GEN p, GEN *pt_m);
 GEN     FpXQ_ellj(GEN a4, GEN a6, GEN T, GEN p);
 int     FpXQ_elljissupersingular(GEN j, GEN T, GEN p);
+void    FpXQ_elltwist(GEN a4, GEN a6, GEN T, GEN p, GEN *pt_a4, GEN *pt_a6);
 GEN     FpXQE_add(GEN P, GEN Q, GEN a4, GEN T, GEN p);
 GEN     FpXQE_changepoint(GEN x, GEN ch, GEN T, GEN p);
 GEN     FpXQE_changepointinv(GEN x, GEN ch, GEN T, GEN p);
@@ -2591,6 +2595,7 @@ GEN     FF_ellgroup(GEN E);
 GEN     FF_elllog(GEN E, GEN P, GEN Q, GEN o);
 GEN     FF_ellmul(GEN E, GEN P, GEN n);
 GEN     FF_ellorder(GEN E, GEN P, GEN o);
+GEN     FF_elltwist(GEN E);
 GEN     FF_ellrandom(GEN E);
 GEN     FF_elltatepairing(GEN E, GEN P, GEN Q, GEN m);
 GEN     FF_ellweilpairing(GEN E, GEN P, GEN Q, GEN m);
