@@ -305,6 +305,7 @@ BA110- [libpari] Flv_neg, Flv_neg_inplace
 ED111- mingw64 support
 BA112- [parallel] new GP function parforvec
 BA113- [libpari] Fl_addmul_pre, Fl_addmulmul_pre
+BA114- [libpari] Fp_elltwist, FpXQ_elltwist, Flxq_elltwist, F2xq_elltwist
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
